--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.5",
+    "@mui/material": "^5.13.6",
     "@vitejs/plugin-react": "^3.0.1",
     "axios": "^1.4.0",
     "esbuild": "0.17.19",
+    "postcss": "^8.4.24",
     "primereact": "^9.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "vite": "^4.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.3.2"
   }
 }
