--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "fix": "prettier --write . && eslint --fix --ext .js ."
   },
   "dependencies": {
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "esbuild": "0.17.19",
