--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "install": "^0.13.0",
+    "npm": "^9.7.2",
     "primereact": "^9.5.0",
     "react-router-dom": "^6.12.0",
+    "react-simple-chatbot": "^0.6.1",
     "sass": "^1.63.4"
   }
 }
