--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.12.1",
     "react-simple-chatbot": "^0.6.1",
     "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.0.4"
   },
   "devDependencies": {
@@ -35,7 +36,6 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.3.2"
+    "prettier": "^2.8.3"
   }
 }
