--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.12.1",
     "react-simple-chatbot": "^0.6.1",
     "sass": "^1.62.1",
+    "styled-components": "^6.0.1",
     "vite": "^4.0.4"
   },
   "devDependencies": {
