--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "primereact": "^9.5.0",
     "react-router-dom": "^6.12.0",
     "react-simple-chatbot": "^0.6.1",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "styled-components": "^6.0.1"
   }
 }
