--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^8.0.3"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "axios": "^1.4.0",
     "install": "^0.13.0",
     "npm": "^9.7.2",
