--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.4",
+    "@material-ui/icons": "^4.11.3",
     "axios": "^1.4.0",
     "install": "^0.13.0",
     "npm": "^9.7.2",
